--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -720,7 +720,11 @@ $sidebar-display: 'sidebar-display';
   overflow-y: auto;
   width: $sidebar-width;
   z-index: 99;
-  background: var(--sidebar-bg);
+  //background: var(--sidebar-bg);
+
+  background: url('/assets/img/배경.jpg');
+  background-size: 100% 100%;
+  background-position: center;
 
   /* Hide scrollbar for Chrome, Safari and Opera */
   &::-webkit-scrollbar {
