--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -11,10 +11,10 @@
   /* Common color */
   --text-color: #34343c;
   --text-muted-color: gray;
-  --heading-color: black;
+  --heading-color: #D6C7FF;
   --blockquote-border-color: #eeeeee;
   --blockquote-text-color: #9a9a9a;
-  --link-color: #2a408e;
+  --link-color: #D6C7FF;
   --link-underline-color: #dee2e6;
   --button-bg: #ffffff;
   --btn-border-color: #e9ecef;
