--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,11 +13,17 @@ tail_includes:
 
 <div class="post-meta text-muted">
   <!-- published date -->
-  <span>
-    {{ site.data.locales[site.lang].post.posted }} {% include datetime.html
-    date=page.date tooltip=true %}
-  </span>
+  <div style="display: flex; justify-content: space-between">
+    <span>
+      {{ site.data.locales[site.lang].post.posted }} {% include datetime.html
+      date=page.date tooltip=true %}
+    </span>
 
+    <a href="https://hits.seeyoufarm.com"
+      ><img
+        src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url }}%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=views&edge_flat=false"
+    /></a>
+  </div>
   <!-- lastmod date -->
   {% if page.last_modified_at %}
   <span>
