--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -10,11 +10,12 @@
 
   /* Common color */
   --text-color: #34343c;
+  --search-color: #092660;
   --text-muted-color: gray;
-  --heading-color: #D6C7FF;
+  --heading-color: #092660;
   --blockquote-border-color: #eeeeee;
   --blockquote-text-color: #9a9a9a;
-  --link-color: #D6C7FF;
+  --link-color: #092660;
   --link-underline-color: #dee2e6;
   --button-bg: #ffffff;
   --btn-border-color: #e9ecef;
@@ -43,7 +44,7 @@
   --sidebar-btn-bg: white;
 
   /* Topbar */
-  --topbar-text-color: rgb(78, 78, 78);
+  --topbar-text-color: #092660;
   --topbar-wrapper-bg: white;
   --search-wrapper-bg: rgb(245, 245, 245, 0.5);
   --search-wrapper-border-color: rgb(245, 245, 245);
